smacker: fix smacker_decode_header_tree() empty vlc table init

Fixes Ticket1858

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>